--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://Makedon-KIEV.github.io/goit-js-11-0",
+  "homepage": "https://Makedon-KIEV.github.io/goit-js-11",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-11-0/"
+    "build": "parcel build src/*.html --public-url /goit-js-11/"
   },
   "repository": {
     "type": "git",
